--- a/Vhista/en.lproj/Localizable.strings
+++ b/Vhista/en.lproj/Localizable.strings
@@ -6,6 +6,16 @@
   Copyright © 2017 juandavidcruz. All rights reserved.
 */
 
+// Landing
+
+"TITLE_ALERT_PRIVACY" = "Important Information";
+
+"MESSAGE_ALERT_PRIVACY" = "Vhista Inc does not save, does not visualize, does not observe, does not store, does not modify and has no record of any photo taken with this application. Your privacy is a priority for us.";
+
+"CONTINUE" = "Continue";
+
+// General
+
 "Greeting_Message"  = "Tap on the screen for a more accurate image analysis";
 
 "Processing_Image" = "Processing Image.";
