--- a/Vhista/es-419.lproj/Localizable.strings
+++ b/Vhista/es-419.lproj/Localizable.strings
@@ -10,7 +10,7 @@
 
 "TITLE_ALERT_PRIVACY" = "Información Importante";
 
-"MESSAGE_ALERT_PRIVACY" = "Vhista Inc no guarda, no visualiza, no observa, no almacena, no modifica y no tiene registro de ninguna foto tomada con esta aplicación. Tu privacidad es prioridad para nosotros.";
+"MESSAGE_ALERT_PRIVACY" = "Vhista Inc no tiene acceso, no modifica y no tiene registro de ninguna foto tomada con esta aplicación. Su privacidad es una prioridad para nosotros.";
 
 "CONTINUE" = "Continuar";
 
