--- a/Vhista/en.lproj/Localizable.strings
+++ b/Vhista/en.lproj/Localizable.strings
@@ -155,6 +155,10 @@
 
 "Message_Product_Expired" = "This subscription is expired";
 
+"Free_Subscription_Confirmation_Title" = "You have obtained 5 more images!";
+
+"Free_Subscription_Confirmation_Body" = "Thank you very much for using Vhista. We want technology to be accessible to everyone, so, whenever you want, we will give you 5 more images. However, you can subscribe, so that we can continue working on Vhista and many other cool projects.";
+
 
 // UI
 
