Added free images analytics. analytics fixes. text nit

--- a/Vhista/es-419.lproj/Localizable.strings
+++ b/Vhista/es-419.lproj/Localizable.strings
@@ -159,7 +159,7 @@
 
 "Free_Subscription_Confirmation_Title" = "Has obtenido 5 imagenes más!";
 
-"Free_Subscription_Confirmation_Body" = "Muchas gracias por usar Vhista. Queremos que la tecnología sea accessible a todos, por esto, siempre que quieras, te regalaremos 5 imagenes más. Sin embargo, puedes subscribirte para que así podamos seguir trabajando en Vhista y muchos proyectos más.";
+"Free_Subscription_Confirmation_Body" = "Muchas gracias por usar Vhista. Queremos que la tecnología sea accessible a todos, por esto, siempre que necesites, te regalaremos 5 imagenes más. Sin embargo, puedes subscribirte para que así podamos seguir trabajando en Vhista y muchos proyectos más.";
 
 "Free_Subscription_Still_On_Trial" = "Aún tienes # imágenes gratis";
 
