Added Adjustable to Feature Collection View

--- a/Vhista/en.lproj/Localizable.strings
+++ b/Vhista/en.lproj/Localizable.strings
@@ -86,6 +86,8 @@
 
 "share_taken_picture" = "Share, or Save Picture";
 
+"feature_picker" = "Feature Picker";
+
 // Error Handling
 
 "Deep_Analysis_Deactivated_Title" = "Service Unavailable";
