--- a/Vhista/es-419.lproj/Localizable.strings
+++ b/Vhista/es-419.lproj/Localizable.strings
@@ -86,6 +86,8 @@
 
 "share_taken_picture" = "Compartir o guardar Imagen";
 
+"feature_picker" = "Selector de Funciones";
+
 // Error Handling
 
 "Deep_Analysis_Deactivated_Title" = "Servicio no disponible";
