--- a/Vhista/es-419.lproj/Localizable.strings
+++ b/Vhista/es-419.lproj/Localizable.strings
@@ -88,6 +88,8 @@
 
 "feature_picker" = "Selector de Funciones";
 
+"dismiss" = "Cerrar";
+
 // Error Handling
 
 "Deep_Analysis_Deactivated_Title" = "Servicio no disponible";
