Update constraints and info vc ui. Close button updates

--- a/Vhista/en.lproj/Localizable.strings
+++ b/Vhista/en.lproj/Localizable.strings
@@ -92,6 +92,8 @@
 
 "made_with_love" = "Made with ❤️ in Colombia 🇨🇴";
 
+"made_with_love_ax" = "Made with love in Colombia";
+
 "legal" = "Legal";
 
 "version" = "Version";
