--- a/Vhista/es-419.lproj/Localizable.strings
+++ b/Vhista/es-419.lproj/Localizable.strings
@@ -92,6 +92,8 @@
 
 "made_with_love" = "Hecho con ❤️ en Colombia 🇨🇴";
 
+"made_with_love_ax" = "Hecho con amor en Colombia";
+
 "legal" = "Legal";
 
 "version" = "Versión";
