--- a/Vhista/en.lproj/Localizable.strings
+++ b/Vhista/en.lproj/Localizable.strings
@@ -100,6 +100,14 @@
 
 "build" = "Build";
 
+"take_picture" = "Take Picture";
+
+"choose_from_library" = "Choose from Photo Library";
+
+"more_information" = "More Information";
+
+"cancel_recognition" = "Cancel Recognition";
+
 // Error Handling
 
 "Deep_Analysis_Deactivated_Title" = "Service Unavailable";
@@ -209,3 +217,6 @@
 
 "POINT" = "point";
 
+// DEV
+
+"donut" = "donut";
