Getting Ready for V4.0

--- a/Vhista/en.lproj/Localizable.strings
+++ b/Vhista/en.lproj/Localizable.strings
@@ -217,6 +217,12 @@
 
 "POINT" = "point";
 
+// Recognition
+
+"confidence" = "Confidence: ";
+
+"no_fast_recognition" = "No Recent Recognition";
+
 // DEV
 
 "donut" = "donut";
