--- a/Vhista/es-419.lproj/Localizable.strings
+++ b/Vhista/es-419.lproj/Localizable.strings
@@ -217,6 +217,12 @@
 
 "POINT" = "punto";
 
+// Recognition
+
+"confidence" = "Confidencia: ";
+
+"no_fast_recognition" = "Sin Reconocimiento Reciente";
+
 // DEV
 
 "donut" = "dona";
