Adding Text Recognition

--- a/Vhista/en.lproj/Localizable.strings
+++ b/Vhista/en.lproj/Localizable.strings
@@ -223,6 +223,12 @@
 
 "no_fast_recognition" = "No Recent Recognition";
 
+// Features
+
+"Image Recognition" = "Image Recognition";
+
+"Text Recognition" = "Text Recognition";
+
 // DEV
 
 "donut" = "donut";
