--- a/Vhista/es-419.lproj/Localizable.strings
+++ b/Vhista/es-419.lproj/Localizable.strings
@@ -1,80 +1,18 @@
-/* 
-  Localizable.strings
-  Vhista
-
-  Created by Juan David Cruz Serrano on 8/2/17.
-  Copyright © 2017 juandavidcruz. All rights reserved.
-*/
-
 // Landing
 
-"TITLE_ALERT_PRIVACY" = "Información Importante";
+"Title_Alert_Privacy" = "Información Importante";
 
-"MESSAGE_ALERT_PRIVACY" = "Vhista Inc no tiene acceso, no modifica y no tiene registro de ninguna foto tomada con esta aplicación. Su privacidad es una prioridad para nosotros.";
+"Message_Alert_Privacy" = "Vhista Inc no tiene acceso, no modifica y no tiene registro de ninguna foto tomada con esta aplicación. Su privacidad es una prioridad para nosotros.";
 
-"CONTINUE" = "Continuar";
+"Continue" = "Continuar";
 
 // General
 
-"Greeting_Message"  = "Toca la pantalla para tener un análisis de imagen más completo";
-
-"Processing_Image" = "Procesando Imagen.";
-
 "No_Objects_Found" = "No he encontrado objetos en la imagen.";
 
-"Error_Getting_Objects" = "Hubo un error al encontrar objetos.";
-
-"LAST_RECOGNITION" = "Último reconocimiento: ";
-
-"Canceling_Processing" = "Cancelando Procesamiento";
-
-"Found_In_Picture" = "Encontré en la imagen: ";
+"Last_Recognition" = "Último reconocimiento: ";
 
 "Analizying_People" = "Analizando Personas en la imagen.";
-
-"No_People" = "No he encontrado rostros en la imagen.";
-
-"Error_Getting_People" = "Hubo un error al encontrar personas.";
-
-"Number_People_Plural" = "Hay XX personas en la imagen.";
-
-"One_Person" = "Hay una persona en la imagen.";
-
-"First_Person" = "La primera persona ";
-
-"Next_Person" = "La siguiente persona ";
-
-"First_And_Only_Person" = "La persona ";
-
-"Last_Person" = "La ultima persona ";
-
-"Is_Male" = "es un hombre ";
-
-"Is_Female" = "es una mujer ";
-
-"Has_Beard" = "que tiene barba, ";
-
-"Has_Mustache" = "que tiene bigote, ";
-
-"Has_Glasses" = "que tiene gafas, ";
-
-"Is_Smiling" = "que está sonriendo.";
-
-"The_Person_Is" = "Esta persona está ";
-
-"Angry" = "brava.";
-
-"Calm" = "calmada.";
-
-"Confused" = "confundida.";
-
-"Upset" = "disgustada.";
-
-"Happy" = "feliz.";
-
-"Sad" = "triste.";
-
-"Surprised" = "sorprendida.";
 
 "One_Person" = " persona";
 
@@ -118,18 +56,6 @@
 
 "Restart_Session" = "Reiniciar Sesión";
 
-// Loading Texts
-
-"HUD_Processing_Image" = "Procesando Imagen";
-
-"HUD_Reading_Response" = "Leyendo Respuesta";
-
-"HUD_Processing_Response" = "Procesando Respuesta";
-
-"HUD_Searching_People" = "Buscando Personas";
-
-"HUD_Describing_People" = "Describiendo Personas";
-
 // System
 
 "No_Camera" = "Necesitas un dispositivo con cámara para usar Vhista.";
@@ -144,78 +70,13 @@
 
 "Not_Reachable" = "Se necesita acceso a internet para usar esta funcionalidad!";
 
-
-// Purchase
-
-"Subscribe_Nav_Title" = "Subscribirse a Vhista";
-
-"Subscribe_Title" = "Límite de Reconocimientos Superado";
-
-"Subscribe_Message" = "Compra o restaura %Title%. Esta subscripción mensual de %Price% te premitirá: %Description%";
-
-"Title_Nothing_To_Restore" = "Nada que restaurar";
-
-"Message_Nothing_To_Restore" = "Esta subscripción no ha sido comprada previamente con esta cuenta de Apple";
-
-"Title_Restore_Failed" = "Error al Restaurar";
-
-"Message_Restore_Failed" = "No se pudo restaurar la subscripción. Por favor intenta más tarde.";
-
-"Cancel_Action" = "Cancelar";
-
-"Close_Action" = "Cerrar";
-
-"Buy_Action" = "Comprar Ahora!";
-
-"Restore_Action" = "Restaurar Compra";
-
-"Service" = "Servicio";
-
-"Monthly" = "Duracíon de la Subscripción: Mensual";
-
-"Price" = "Precio";
-
-"Upgrade_Button_Title" = "Subscribirse";
-
-"Show_Subscription_Button_Title" = "Subscripción";
-
-"Title_Never_Purchased"= "Nunca Comprado";
-
-"Message_Never_Purchased" = "Esta subscripción nunca ha sido comprada";
-
-"Title_Product_Expired"= "Subscripción Vencida";
-
-"Message_Product_Expired"="Esta subscripción se encuentra vencida.";
-
-"Free_Subscription_Confirmation_Title" = "Has obtenido 5 imagenes más!";
-
-"Free_Subscription_Confirmation_Body" = "Muchas gracias por usar Vhista. Queremos que la tecnología sea accessible a todos, por esto, siempre que necesites, te regalaremos 5 imagenes más. Sin embargo, puedes subscribirte para que así podamos seguir trabajando en Vhista y muchos proyectos más.";
-
-"Free_Subscription_Still_On_Trial" = "Aún tienes # imágenes gratis";
-
-"Free_Subscription_Still_On_Trial_Single" = "Aún tienes # imágen gratis";
-
-"Free_Subscription_Still_On_Trial_Body" = "Para poder obtener 5 imagenes gratis más, primero debes usar las imagenes gratuitas que ya tienes.";
-
-// UI
-
-"Title_Button_Deep_Analysis" = "Análisis Panoramico";
-
-"Title_Button_Loading_Purchases" = "Mostrando Alertas de Compra";
-
-"Text_Subscription_Terms" = "Puede ver nuestras Condiciones de uso en: https://vhista.com/terms/ y nuestra política de privacidad en https://vhista.com/privacy/\n\nEl pago se cargará a su cuenta de  iTunes al confirmar la compra.\n\nLa suscripción se renueva automáticamente a menos que se cancele la renovación automática por lo menos 24 horas antes del final del período actual \n\nLa cuenta se cargará para su renovación dentro de las 24 horas anteriores al final del período actual e identificará el costo de la renovación \n\nLas suscripciones pueden ser administradas por el usuario y la renovación automática puede ser desactivada accediendo a la configuración de la cuenta del \nusuario después de la compra \n\nCualquier parte no utilizada de un período de prueba gratuito, si se ofrece, se perderá cuando el usuario compra una suscripción a esa publicación, cuando corresponda.";
-
-"Upgrade_Button_Accessibility_Hint" = "Presione este botón para mostrar la pantalla de compra donde usted podrá suscribirse a Vhista para obtener acceso ilimitado.";
-
-"Subscription_Button_Accessibility_Hint" = "Presione este botón para conocer y administrar su suscripción a Vhista.";
-
 // Distances
 
-"METERS" = "metros";
+"meters" = "metros";
 
-"CENTIMETERS" = "centímetros";
+"centimeters" = "centímetros";
 
-"POINT" = "punto";
+"point" = "punto";
 
 // Recognition
 
@@ -225,10 +86,6 @@
 
 // Features
 
-"Image Recognition" = "Reconocer Imagen";
+"Image_Recognition" = "Reconocer Imagen";
 
-"Text Recognition" = "Reconocer Texto";
-
-// DEV
-
-"donut" = "dona";
+"Text_Recognition" = "Reconocer Texto";
